[project]
name = "mtlsbridge"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "ars6502", email = "arun.r.sharma@proton.me" }
]
requires-python = ">=3.10"
dependencies = [
    "typer[all]>=0.9.0",
    "pyyaml>=6.0",
    "cryptography>=42.0.0",
    "mitmproxy>=10.0.0",
]

[project.scripts]
mtls-gen-certs = "mtlsbridge.certs:cli"
mtls-server = "mtlsbridge.server:cli"
mtls-bridge = "mtlsbridge.bridge:cli"
mtls-rewrite = "mtlsbridge.rewrite:cli"

